--- a/Identification/PreProcessing/test.ipynb
+++ b/Identification/PreProcessing/test.ipynb
@@ -67,6 +67,63 @@
    "source": [
     "saveData(data, r\"C:\\Users\\Lab User\\Desktop\\temp1\\Granular-Compression\\Data\", 'drugs.hdf5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "696f0323",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "564c2471",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[ 4.  5.  6.]\n",
+      " [13. 14. 15.]\n",
+      " [22. 23. 24.]]\n"
+     ]
+    },
+    {
+     "ename": "AxisError",
+     "evalue": "axis 2 is out of bounds for array of dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAxisError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m dog = np.mean(a,axis=(\u001b[32m1\u001b[39m))\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(dog)\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m cat = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdog\u001b[49m\u001b[43m,\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(cat)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/Granular-Compression/.venv/lib/python3.13/site-packages/numpy/_core/fromnumeric.py:3824\u001b[39m, in \u001b[36mmean\u001b[39m\u001b[34m(a, axis, dtype, out, keepdims, where)\u001b[39m\n\u001b[32m   3821\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   3822\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m mean(axis=axis, dtype=dtype, out=out, **kwargs)\n\u001b[32m-> \u001b[39m\u001b[32m3824\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_methods\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_mean\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3825\u001b[39m \u001b[43m                      \u001b[49m\u001b[43mout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/Granular-Compression/.venv/lib/python3.13/site-packages/numpy/_core/_methods.py:120\u001b[39m, in \u001b[36m_mean\u001b[39m\u001b[34m(a, axis, dtype, out, keepdims, where)\u001b[39m\n\u001b[32m    116\u001b[39m arr = asanyarray(a)\n\u001b[32m    118\u001b[39m is_float16_result = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m120\u001b[39m rcount = \u001b[43m_count_reduce_items\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    121\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m rcount == \u001b[32m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m where \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m umr_any(rcount == \u001b[32m0\u001b[39m, axis=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m    122\u001b[39m     warnings.warn(\u001b[33m\"\u001b[39m\u001b[33mMean of empty slice\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;167;01mRuntimeWarning\u001b[39;00m, stacklevel=\u001b[32m2\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Coding/Granular-Compression/.venv/lib/python3.13/site-packages/numpy/_core/_methods.py:83\u001b[39m, in \u001b[36m_count_reduce_items\u001b[39m\u001b[34m(arr, axis, keepdims, where)\u001b[39m\n\u001b[32m     81\u001b[39m     items = \u001b[32m1\u001b[39m\n\u001b[32m     82\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m ax \u001b[38;5;129;01min\u001b[39;00m axis:\n\u001b[32m---> \u001b[39m\u001b[32m83\u001b[39m         items *= arr.shape[\u001b[43mmu\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnormalize_axis_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mndim\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[32m     84\u001b[39m     items = nt.intp(items)\n\u001b[32m     85\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     86\u001b[39m     \u001b[38;5;66;03m# TODO: Optimize case when `where` is broadcast along a non-reduction\u001b[39;00m\n\u001b[32m     87\u001b[39m     \u001b[38;5;66;03m# axis and full sum is more excessive than needed.\u001b[39;00m\n\u001b[32m     88\u001b[39m \n\u001b[32m     89\u001b[39m     \u001b[38;5;66;03m# guarded to protect circular imports\u001b[39;00m\n",
+      "\u001b[31mAxisError\u001b[39m: axis 2 is out of bounds for array of dimension 2"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[[1, 2, 3 ],[4, 5, 6 ],[7, 8, 9 ]],  # Yellow represents row\n",
+    "              [[10,11,12],[13,14,15],[16,17,18]],  # Blue   represents column \n",
+    "              [[19,20,21],[22,23,24],[25,26,27]]]) # Yellow\n",
+    "\n",
+    "print(a[0][:][:])\n",
+    "\n",
+    "dog = np.mean(a,axis=(1))\n",
+    "print(dog)\n",
+    "\n",
+    "cat = np.mean(dog,axis=(2))\n",
+    "print(cat)"
+   ]
   }
  ],
  "metadata": {
@@ -85,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
